templates/IxoNetworkingStack.yaml
AWSTemplateFormatVersion: 2010-09-09
Description: >-
  AWS CloudFormation template instantiating a Network stack to contain ixo's component services.
  Exported resources:
    - VPCId
    - PublicSubnetId
    - PublicInstancesSecurityGroupId
    - AvailabilityZone
Parameters:
  SSHLocation:
    Description: ' The IP address range that can be used to SSH to the EC2 instances'
    Type: String
    MinLength: '9'
    MaxLength: '18'
    Default: 0.0.0.0/0
    AllowedPattern: '(\d{1,3})\.(\d{1,3})\.(\d{1,3})\.(\d{1,3})/(\d{1,2})'
    ConstraintDescription: must be a valid IP CIDR range of the form x.x.x.x/x.
Resources:
  VPC:
    Type: 'AWS::EC2::VPC'
    Properties:
      EnableDnsSupport: 'true'
      EnableDnsHostnames: 'true'
      CidrBlock: 10.0.0.0/16
      Tags:
        - Key: Application
          Value: !Ref 'AWS::StackId'
    Metadata:
      'AWS::CloudFormation::Designer':
        id: 42f62244-d45b-415a-b97c-28cac68733bd
  PublicSubnet:
    Type: 'AWS::EC2::Subnet'
    Properties:
      VpcId: !Ref VPC
      CidrBlock: 10.0.0.0/24
      Tags:
        - Key: Application
          Value: !Ref 'AWS::StackId'
    Metadata:
      'AWS::CloudFormation::Designer':
        id: b7a83aba-5f77-4922-841c-fa659d86502d
  InternetGateway:
    Type: 'AWS::EC2::InternetGateway'
    Properties:
      Tags:
        - Key: Application
          Value: !Ref 'AWS::StackId'
    Metadata:
      'AWS::CloudFormation::Designer':
        id: a895d245-b6bf-454e-b5fd-5e490bc49308
  AttachGateway:
    Type: 'AWS::EC2::VPCGatewayAttachment'
    Properties:
      VpcId: !Ref VPC
      InternetGatewayId: !Ref InternetGateway
    Metadata:
      'AWS::CloudFormation::Designer':
        id: 6c4db1cb-64b8-48ab-8edc-ee7e46cdb3ad
  RouteTable:
    Type: 'AWS::EC2::RouteTable'
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Application
          Value: !Ref 'AWS::StackId'
    Metadata:
      'AWS::CloudFormation::Designer':
        id: f9bbaad5-d758-4b57-ac09-a2688828813b
  Route:
    Type: 'AWS::EC2::Route'
    DependsOn: AttachGateway
    Properties:
      RouteTableId: !Ref RouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway
    Metadata:
      'AWS::CloudFormation::Designer':
        id: e65c85ac-5ebe-4d21-83ef-e9a8557f749e
  SubnetRouteTableAssociation:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      SubnetId: !Ref PublicSubnet
      RouteTableId: !Ref RouteTable
    Metadata:
      'AWS::CloudFormation::Designer':
        id: 75a2a437-5dba-4037-bac8-fc1ac9cce3f7
  SubnetNetworkAclAssociation:
    Type: 'AWS::EC2::SubnetNetworkAclAssociation'
    Properties:
      SubnetId: !Ref PublicSubnet
      NetworkAclId: !GetAtt
        - VPC
        - DefaultNetworkAcl
    Metadata:
      'AWS::CloudFormation::Designer':
        id: ed7176bb-1475-4c51-89e8-d8959196563a
  PublicInstancesSecurityGroup:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      VpcId: !Ref VPC
      GroupDescription: Enable HTTP traffic on port 80, HTTPS traffic on port 443 & SSH access via port 22
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: '22'
          ToPort: '22'
          CidrIp: !Ref SSHLocation
        - IpProtocol: tcp
          FromPort: '80'
          ToPort: '80'
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: '443'
          ToPort: '443'
          CidrIp: 0.0.0.0/0
    Metadata:
      'AWS::CloudFormation::Designer':
        id: fbd52d3e-087e-46f8-b55b-c22f6d4b0c79
Outputs:
  VPCId:
    Description: VPC
    Value: !Ref VPC
    Export:
      Name: !Sub '${AWS::StackName}-VPC-Id'
  PublicSubnetId:
    Description: The subnet ID to use for public web servers
    Value: !Ref PublicSubnet
    Export:
      Name: !Sub '${AWS::StackName}-PublicSubnet-Id'
  PublicInstancesSecurityGroupId:
    Description: The security group Id to use for public servers
    Value: !Ref PublicInstancesSecurityGroup
    Export:
      Name: !Sub '${AWS::StackName}-HostInstanceSecurityGroup-Id'
  AvailabilityZone:
    Description: The availability zone to use for persistent volumes
    Value: !GetAtt
      - PublicSubnet
      - AvailabilityZone
    Export:
      Name: !Sub '${AWS::StackName}-AvailabilityZone'
Metadata:
  'AWS::CloudFormation::Designer':
    a895d245-b6bf-454e-b5fd-5e490bc49308:
      size:
        width: 60
        height: 60
      position:
        x: 900
        'y': 90
      z: 1
      embeds: []
    42f62244-d45b-415a-b97c-28cac68733bd:
      size:
        width: 780
        height: 780
      position:
        x: 90
        'y': 270
      z: 1
      embeds:
        - 7e291fcb-8470-4055-a5a7-bb2a6817b82a
        - fbd52d3e-087e-46f8-b55b-c22f6d4b0c79
        - f9bbaad5-d758-4b57-ac09-a2688828813b
        - b7a83aba-5f77-4922-841c-fa659d86502d
    fbd52d3e-087e-46f8-b55b-c22f6d4b0c79:
      size:
        width: 60
        height: 60
      position:
        x: 600
        'y': 330
      z: 2
      parent: 42f62244-d45b-415a-b97c-28cac68733bd
      embeds: []
      iscontainedinside:
        - 42f62244-d45b-415a-b97c-28cac68733bd
    f9bbaad5-d758-4b57-ac09-a2688828813b:
      size:
        width: 240
        height: 240
      position:
        x: 220
        'y': 400
      z: 2
      parent: 42f62244-d45b-415a-b97c-28cac68733bd
      embeds:
        - e65c85ac-5ebe-4d21-83ef-e9a8557f749e
      iscontainedinside:
        - 42f62244-d45b-415a-b97c-28cac68733bd
    6c4db1cb-64b8-48ab-8edc-ee7e46cdb3ad:
      source:
        id: 42f62244-d45b-415a-b97c-28cac68733bd
      target:
        id: a895d245-b6bf-454e-b5fd-5e490bc49308
      z: 1
    e65c85ac-5ebe-4d21-83ef-e9a8557f749e:
      size:
        width: 60
        height: 60
      position:
        x: 250
        'y': 460
      z: 3
      parent: f9bbaad5-d758-4b57-ac09-a2688828813b
      embeds: []
      isassociatedwith:
        - a895d245-b6bf-454e-b5fd-5e490bc49308
      iscontainedinside:
        - f9bbaad5-d758-4b57-ac09-a2688828813b
      dependson:
        - 6c4db1cb-64b8-48ab-8edc-ee7e46cdb3ad
    b7a83aba-5f77-4922-841c-fa659d86502d:
      size:
        width: 240
        height: 240
      position:
        x: 120
        'y': 720
      z: 2
      parent: 42f62244-d45b-415a-b97c-28cac68733bd
      embeds:
        - 090078c2-f708-4a32-93da-435cb089eeec
        - c3a5303a-dbf0-48fd-b783-1a34c6c78342
      iscontainedinside:
        - 42f62244-d45b-415a-b97c-28cac68733bd
    c3a5303a-dbf0-48fd-b783-1a34c6c78342:
      size:
        width: 60
        height: 60
      position:
        x: 140
        'y': 880
      z: 3
      parent: b7a83aba-5f77-4922-841c-fa659d86502d
      embeds: []
      iscontainedinside:
        - b7a83aba-5f77-4922-841c-fa659d86502d
      dependson:
        - 6c4db1cb-64b8-48ab-8edc-ee7e46cdb3ad
    b0d68bfc-1338-48b0-ac38-247fd9f34309:
      size:
        width: 60
        height: 60
      position:
        x: 900
        'y': 210
      z: 1
      embeds: []
      isassociatedwith:
        - c3a5303a-dbf0-48fd-b783-1a34c6c78342
      dependson:
        - 6c4db1cb-64b8-48ab-8edc-ee7e46cdb3ad
    ed7176bb-1475-4c51-89e8-d8959196563a:
      source:
        id: b2558e8b-3fe4-4ada-a582-24e7f8227f4f
      target:
        id: b7a83aba-5f77-4922-841c-fa659d86502d
      z: 2
    75a2a437-5dba-4037-bac8-fc1ac9cce3f7:
      source:
        id: f9bbaad5-d758-4b57-ac09-a2688828813b
      target:
        id: b7a83aba-5f77-4922-841c-fa659d86502d
      z: 2
    7e291fcb-8470-4055-a5a7-bb2a6817b82a:
      size:
        width: 60
        height: 60
      position:
        x: 600
        'y': 430
      z: 2
      parent: 42f62244-d45b-415a-b97c-28cac68733bd
      embeds: []
      iscontainedinside:
        - 42f62244-d45b-415a-b97c-28cac68733bd
    090078c2-f708-4a32-93da-435cb089eeec:
      size:
        width: 60
        height: 60
      position:
        x: 220
        'y': 790
      z: 3
      parent: b7a83aba-5f77-4922-841c-fa659d86502d
      embeds: []
      iscontainedinside:
        - b7a83aba-5f77-4922-841c-fa659d86502d
